# python-rsdclient

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst  osc_plugin_cli.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
python-rsdclient/tests/: test_python-rsdclient.py
releasenotes/source/: conf.py  index.rst
rsdclient/: __init__.py
rsdclient/common/: base.py  command.py  utils.py
rsdclient/osc/: plugin.py
rsdclient/osc/v1/: fabric.py  node.py  storage.py  storage_service.py
rsdclient/osc/v2/: fabric.py  node.py  system.py
rsdclient/tests/: test_rsdclient.py
rsdclient/tests/common/: fakes.py  test_command.py  test_utils.py
rsdclient/tests/v1/: test_client.py  test_fabric.py  test_node.py  test_storage.py  test_storage_service.py
rsdclient/tests/v2/: test_client.py  test_fabric.py  test_node.py  test_storage_service.py
rsdclient/v1/: client.py  fabric.py  node.py  storage.py  storage_service.py
rsdclient/v2/: client.py  fabric.py  node.py  storage_service.py  system.py
tools/: tox_install.sh
