[metadata]
name = python-rsdclient
summary = OpenStack client plugin for Rack Scale Design
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    rsdclient

[entry_points]
openstack.cli.extension =
    rsd = rsdclient.osc.plugin

openstack.rsd.v1 =
    rsd_node_compose = rsdclient.osc.v1.node:ComposeNode
    rsd_node_delete = rsdclient.osc.v1.node:DeleteNode
    rsd_node_show = rsdclient.osc.v1.node:ShowNode
    rsd_node_list = rsdclient.osc.v1.node:ListNode
    rsd_node_attach = rsdclient.osc.v1.node:AttachEndpoint
    rsd_node_detach = rsdclient.osc.v1.node:DetachEndpoint

    rsd_storage_list = rsdclient.osc.v1.storage_service:ListStorageServices
    rsd_storage_show = rsdclient.osc.v1.storage_service:ShowStorageServices

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = rsdclient/locale
domain = rsdclient

[update_catalog]
domain = rsdclient
output_dir = rsdclient/locale
input_file = rsdclient/locale/rsdclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = rsdclient/locale/rsdclient.pot
