[metadata]
name = python-rsdclient
summary = OpenStack client plugin for Rack Scale Design
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    rsdclient

[entry_points]
openstack.cli.extension =
    rsd = rsdclient.osc.plugin

openstack.rsd.v2 =
    rsd_node_compose = rsdclient.osc.v2.node:ComposeNode
    rsd_node_delete = rsdclient.osc.v2.node:DeleteNode
    rsd_node_show = rsdclient.osc.v2.node:ShowNode
    rsd_node_list = rsdclient.osc.v2.node:ListNode
    rsd_node_attach = rsdclient.osc.v2.node:AttachEndpoint
    rsd_node_detach = rsdclient.osc.v2.node:DetachEndpoint
    rsd_node_reset = rsdclient.osc.v2.node:ResetNode
    rsd_node_bootsource = rsdclient.osc.v2.node:SetBootSource

    rsd_storage_list = rsdclient.osc.v2.storage_service:ListStorageServices
    rsd_storage_show = rsdclient.osc.v2.storage_service:ShowStorageServices
    rsd_storage_volume_list = rsdclient.osc.v2.storage_service:ListVolumes
    rsd_storage_volume_show = rsdclient.osc.v2.storage_service:ShowVolume
    rsd_storage_volume_update = rsdclient.osc.v2.storage_service:UpdateVolume
    rsd_storage_volume_init = rsdclient.osc.v2.storage_service:InitializeVolume
    rsd_storage_volume_create = rsdclient.osc.v2.storage_service:CreateVolume
    rsd_storage_volume_delete = rsdclient.osc.v2.storage_service:DeleteVolume
    rsd_storage_drive_list = rsdclient.osc.v2.storage_service:ListDrives
    rsd_storage_drive_show = rsdclient.osc.v2.storage_service:ShowDrive
    rsd_storage_storagepool_list = rsdclient.osc.v2.storage_service:ListStoragePools
    rsd_storage_storagepool_show = rsdclient.osc.v2.storage_service:ShowStoragePool

    rsd_fabric_list = rsdclient.osc.v2.fabric:ListFabric
    rsd_fabric_show = rsdclient.osc.v2.fabric:ShowFabric
    rsd_fabric_endpoint_list = rsdclient.osc.v2.fabric:ListEndpoint
    rsd_fabric_endpoint_show = rsdclient.osc.v2.fabric:ShowEndpoint

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = rsdclient/locale
domain = rsdclient

[update_catalog]
domain = rsdclient
output_dir = rsdclient/locale
input_file = rsdclient/locale/rsdclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = rsdclient/locale/rsdclient.pot
